wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

header {
    display: grid;
    grid-template-columns: 150px auto;
}
        
body{
    background-color: #8ecae6
}
footer {
    background-color: #6f7364;
    padding: 25px 50px;
    margin-top: 200px; 
    display: flex;
    justify-content: space-around;
    align-items: center;
}
selector{
    color: #219EBC
}
.logo-box{
    margin- left: 30px;
}
nav a{
    color: #219EBC
    font-weight: bold;
    text-decoration: none;
    text-align: center;
    padding: 35px;
}
nav {
    display: flex;
    justify-content: space-around;
}

ul{
    list-style-type: none;
    
}
li{
    display: inline;
    
}
h1,h2,h3,h4,h5,h6 {
    font-family: 'Roboto', sans-serif;
    color: #219EBC;
}
p{
    margin-left: 30px;

}
.home-title{
    font-family: 'Roboto', sans-serif;
    font-size: 2em;
    margin-top: 10px;
}
.msg{
    background-color: #8ecae6;
    line-height: 1.5em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/7;
    box-shadow: 5px 5px 10px #6f7364;
}   
#content{
    max-width: 960px;
    margin: 0 auto;
    background-color: #8ecae6;

}
.home-headine-3, .home-paragraph-3{
    text-align: center;
}
.book, .join {
    background-color: #d9c2a3;
    color: black;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}
.card-img {
    border: 10px solid #d9c2a3;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
}
.card-img:hover {
    opacity: .6;
    transform: scale(1.1);
}
main section img {
    box-sizing: border-box;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}
#hero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px; 
}

#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
}
#hero-msg h4 {
    color: white;
    margin-top: 100px;
    z-index: -1;
}
#hero-img {
    width: 100%;
}          
.mountains {
    width: 100%;
    grid-column: 2/7;
    grid-row: 5/8;
    box-shadow: 5px 5px 10px #6f7364;
}   
@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    #hero-msg h1 {
        color: #6f7364;
    }
    .home-title {
        font-size: 25px;
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    footer {
        margin-top: 25px;
    }
}
            

